--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
   <div class="carousel-inner">
     
       <div class="item active">
-        <img src="images/bmw1.jpg" alt="Slide One">
+        <img src="images/bmw1.JPG" alt="Slide One">
         </a>
         <div class="carousel-caption">
         </div>
