--- a/info.html
+++ b/info.html
@@ -45,7 +45,7 @@
       <div class="row marketing">
         <div class="col-xl-3"></div>
         <div class="col-lg-6 col-xl-6">
-          <img src="img/selfie.jpg"
+          <img src="images/selfie.jpg"
         </div>
         <div class="col-xl-3"></div>
       </div>
