Added testimonials and changed dimmer for infiniti

--- a/work.html
+++ b/work.html
@@ -35,6 +35,7 @@
             <li><a href="info.html">My Info</a></li>
             <li class="active"><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="test.html">Testimonials</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -63,10 +64,10 @@
         </div>
         <div class="col-sm-4 col-md-4">
           <div class="thumbnail">
-          <img src="images/infiniti2.JPG" alt="...">
+          <img src="images/blue2.jpg" alt="...">
             <div class="caption">
-            <h3>Infiniti G37</h3>
-            <p>A client's completely blacked out, gorgeous Infiniti Coupe in the perfect background.</p>
+            <h3>BMW F80 M3</h3>
+            <p>A client's dropdead gorgeous, electric blue caught in action on the highway.</p>
             <p><a href="#infiniti" class="btn btn-primary" role="button">Gallery</a></p>
             </div>
           </div>
@@ -158,7 +159,7 @@
 </div>
       </div>
       <div class="row marketing">
-        <a  name="infiniti"><h3><u>Infiniti G37</u></h3></a>
+        <a  name="infiniti"><h3><u>BMW F80 M3</u></h3></a>
                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -171,20 +172,20 @@
   <div class="carousel-inner">
     
       <div class="item active">
-        <img src="images/infiniti1.jpg" alt="Slide One">
+        <img src="images/blue1.jpg" alt="Slide One">
         </a>
         <div class="carousel-caption">
         </div>
       </div>
     
       <div class="item">
-        <img src="images/infiniti2.JPG" alt="Slide Two">
+        <img src="images/blue2.jpg" alt="Slide Two">
         <div class="carousel-caption">
         </div>
       </div>
 
       <div class="item">
-        <img src="images/infiniti3.JPG" alt="Slide Three">
+        <img src="images/blue3.jpg" alt="Slide Three">
         <div class="carousel-caption">
         </div>
       </div>
