--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,19 @@
             <li><a href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li class="active"><a href="contact.html">Contact Me</a></li>
+            <li><a href="test.html">Testimonials</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
       <div class="row marketing">
-        <div class="col-lg-6">
+        <div class="col-xl-3"></div>
+        <div class="col-lg-6 col-xl-6">
           <h4>Want to discuss my work? Want me to photograph your ride? Just want to talk cars?</h4>
           <p>Drop me a note below so we can chat.</p>
         </div>
+        <div class="col-xl-3"></div>
       </div>
             <form role="form" action="//forms.brace.io/bgillman@wustl.edu" method="POST">
               <div class="form-group">
