--- a/info.html
+++ b/info.html
@@ -37,6 +37,7 @@
             <li class="active"><a href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="test.html">Testimonials</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
