--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand name" href="home.html">Brandon Gillman</a>
+          <a class="navbar-brand name navbar-item" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
