--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
           <a class="navbar-brand name navbar-item" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="info.html">My Info</a></li>
+          <ul class="nav navbar-nav head">
+            <li><a class="head" href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
             <li><a href="test.html">Testimonials</a></li>
@@ -41,10 +41,10 @@
       </div>
     </div>
 
-    <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>My name is Brandon Gillman and I love cars.</h4>
-          <p>I am passionate about cars and want to make your ride look sick.</p>
+    <div class="row marketing front" id="container">
+        <div class="col-lg-6 front">
+          <p><a href="info.html">My name is Brandon Gillman and I love cars.</a><p>
+          <p><a href="work.html">I am passionate about cars and want to make your ride look sick.</a></p>
         </div>
       </div>
 
