--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@
           <a class="navbar-brand name" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav head">
             <li class="active"><a href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
@@ -52,7 +52,7 @@
       </div>
       <div class="row marketing">
         <div class="col-lg-3"></div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 info">
           <h4>My name is Brandon Gillman.</h4>
           <p>I am a senior at Washington University in St. Louis. I am studying Systems Engineering and Operations & Supply Chain Management. I have always loved cars and photography, and have been able to combine those passions into one. I hope you enjoy my page and my photography.</p>
           <button class="btn btn-default"><a href="contact.html">Contact Me</a></button>
