--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
           <a class="navbar-brand name" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav head">
             <li><a href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
@@ -45,24 +45,28 @@
 
       
       <div class="row marketing">
-        <div class="col-lg-6 col-md-6 section">
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-4 col-md-4 section">
           <h4>Marc</h4>
           <p>A portrait of my Aston Martin was the perfect finishing touch to my office and photograph that Brandon took is now the centerpiece of my office. I could not have been happier with his work, great experience!</p>
         </div>
-        <div class="col-lg-6 col-md-6 section">
+        <div class="col-lg-4 col-md-4 section">
           <h4>Cameron</h4>
-          <p>I wanted to sell my car on the Internet and the only way I could do that was to have an awesome set of photos of my Bimmer and that is exactly what I got with Brandon!</p>
+          <p>I wanted to sell my car on the Internet and the only way I could do that was to have an awesome set of photos of my Bimmer and that is exactly what I got with Brandon! With his photographs, I was able to get my asking price.</p>
         </div>
+        <div class="col-lg-2 col-md-2"></div>
       </div>
       <div class="row marketing ">
-        <div class="col-lg-6 col-md-6 section">
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-4 col-md-4 section">
           <h4>Griffin</h4>
           <p>I was hosting a car show in my town and wanted someone to document the night to use as advertisements for our next event. He took some amazing shots! Definitely having him help us out with our next event.</p>
         </div>
-        <div class="col-lg-6 col-md-6 section">
+        <div class="col-lg-4 col-md-4 section">
           <h4>Sloane</h4>
-          <p>I'm in a antique car club and our group wanted a professional photo of everyone in the group's car. We absolutely love it!</p>
+          <p>I'm in a antique car club and our group wanted a professional photo of everyone in the group's car. We absolutely love the way it turned out and we are having Brandon come to our next event! Highly recommend!</p>
         </div>
+        <div class="col-lg-2 col-md-2"></div>
       </div>
     </div> <!-- /container -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
