--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand name" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav head">
             <li><a href="info.html">My Info</a></li>
             <li class="active"><a href="work.html">My Work</a></li>
             <li><a href="contact.html">Contact Me</a></li>
@@ -74,7 +74,7 @@
         </div>
         </div>
       </div>
-      <div class="row marketing">
+      <div class="row marketing car">
         <a  name="bmw"><h3><u>BMW 335i</u></h3></a>
                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -116,7 +116,7 @@
   </a>
 </div>
       </div>
-      <div class="row marketing">
+      <div class="row marketing car">
         <a  name="aston"><h3><u>Aston Martin V8 Vantage</u></h3></a>
                <div id="carousel-example-generic2" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -158,7 +158,7 @@
   </a>
 </div>
       </div>
-      <div class="row marketing">
+      <div class="row marketing car">
         <a  name="infiniti"><h3><u>BMW F80 M3</u></h3></a>
                <div id="carousel-example-generic3" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
