--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand name" href="home.html">Brandon Gillman</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav head">
             <li><a href="info.html">My Info</a></li>
             <li><a href="work.html">My Work</a></li>
             <li class="active"><a href="contact.html">Contact Me</a></li>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-      <div class="row marketing">
+      <div class="row marketing contact">
         <div class="col-xl-3"></div>
         <div class="col-lg-6 col-xl-6">
           <h4>Want to discuss my work? Want me to photograph your ride? Just want to talk cars?</h4>
@@ -73,7 +73,7 @@
                   <input type="checkbox" name="checkbox">Would you like to recieve updates when I post new work?
                 </label>
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="submit" class="btn btn-default submit">Submit</button>
             </form>
 
 
