--- a/info.html
+++ b/info.html
@@ -45,8 +45,8 @@
 
       <div class="row marketing">
         <div class="col-xl-3"></div>
-        <div class="col-lg-6 col-xl-6">
-          <img src="images/selfie.jpg"
+        <div class="col-lg-6 col-xl-6 picture">
+          <img class="picture" src="images/selfie.jpg"
         </div>
         <div class="col-xl-3"></div>
       </div>
